--- a/proj_report_outline.tex
+++ b/proj_report_outline.tex
@@ -13,6 +13,10 @@
 \usepackage{floatrow}
 \newfloatcommand{capbtabbox}{table}[][\FBwidth]
 
+\usepackage[boxruled,
+		    noend,
+		    ]{algorithm2e}
+\DontPrintSemicolon
 
 \usepackage{url} % for typesetting urls
 \usepackage{hyperref}
