--- a/proj_report_outline.tex
+++ b/proj_report_outline.tex
@@ -9,7 +9,7 @@
               , openright
               ]{report}
 
-
+\usepackage{multirow}
 \usepackage{floatrow}
 \newfloatcommand{capbtabbox}{table}[][\FBwidth]
 
